plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '6.1.0'
}

repositories {
    mavenCentral()
}

compileJava {
    options.release = 16
}

dependencies {
    implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.22.1'
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'com.beust:jcommander:1.81'
    implementation 'org.jsoup:jsoup:1.13.1'
}

jar {
    manifest {
        attributes('Main-Class': 'io.github.bensku.tsbind.cli.BindGenApp')
    }
}